<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_purple">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_purple"
        tools:context=".JournalFragment">


        <EditText
            android:id="@+id/journalTitle"
            android:layout_width="330dp"
            android:layout_height="44dp"
            android:layout_marginTop="16dp"
            android:background="@color/white"
            android:hint="@string/enter_this_entry_s_title_here"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/journalContents"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:minHeight="400dp"
            android:layout_marginTop="24dp"
            android:background="@color/white"
            android:gravity="top|start"
            android:hint="@string/what_was_in_your_dream"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/journalTitle" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginTop="32dp"
            android:text="@string/save_journal_entry"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/journalContents" />

        <Button
            android:id="@+id/history_button"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginTop="12dp"
            android:text="@string/view_saved_entries"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/save_button"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/save_button"
            app:layout_constraintTop_toBottomOf="@+id/save_button"
            app:layout_constraintVertical_bias="0.037" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>